--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-    <header class="container mx-auto">
+    <header class="container mx-auto  sm:px-5">
         <div class="navbar py-10 bg-base-100">
             <div class="navbar-start">
                 <div class="dropdown">
@@ -70,7 +70,7 @@
     </header>
 
 
-    <main class="container mx-auto">
+    <main class="container mx-auto sm:px-5">
         <!-- banner section  -->
         <section class="my-20">
             <div class="hero min-h-screen" style="background-image: url(images/banner.png);">
@@ -178,7 +178,7 @@
             <div class="carousel w-full reviews-container">
                 <div id="slide1" class="carousel-item relative w-full">
                     <div class="hero max-h-96" style="background-image: url(images/slider-1.jpg);">
-                        <div class="hero-overlay bg-opacity-20"></div>
+                        <div class="hero-overlay"></div>
                         <div class=" text-center text-neutral-content">
                             <div class=" py-10 max-w-xl">
                                 <img src="images/profile.jpg" class="rounded-full w-20 mx-auto" alt="">
@@ -192,13 +192,13 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
-                        <a href="#slide2" class="btn btn-circle">❯</a>
+                        <a href="#slide4" class="btn btn-circle bg-[#B68C5A] text-white">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-[#B68C5A] text-white">❯</a>
                     </div>
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
                     <div class="hero  max-h-96" style="background-image: url(images/slider-2.jpg);">
-                        <div class="hero-overlay bg-opacity-20"></div>
+                        <div class="hero-overlay"></div>
                         <div class=" text-center text-neutral-content">
                             <div class="max-w-xl py-10">
                                 <img src="images/profile.jpg" class="rounded-full w-20 mx-auto" alt="">
@@ -212,13 +212,13 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a>
-                        <a href="#slide3" class="btn btn-circle">❯</a>
+                        <a href="#slide1" class="btn btn-circle bg-[#B68C5A] text-white">❮</a>
+                        <a href="#slide3" class="btn btn-circle bg-[#B68C5A] text-white">❯</a>
                     </div>
                 </div>
                 <div id="slide3" class="carousel-item relative w-full">
                     <div class="hero  max-h-96" style="background-image: url(images/slider-3.jpg);">
-                        <div class="hero-overlay bg-opacity-20"></div>
+                        <div class="hero-overlay"></div>
                         <div class=" text-center text-neutral-content">
                             <div class="max-w-xl py-10">
                                 <img src="images/profile.jpg" class="rounded-full w-20 mx-auto" alt="">
@@ -232,17 +232,99 @@
                         </div>
                     </div>
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide2" class="btn btn-circle">❮</a>
-                        <a href="#slide4" class="btn btn-circle">❯</a>
+                        <a href="#slide2" class="btn btn-circle bg-[#B68C5A] text-white">❮</a>
+                        <a href="#slide4" class="btn btn-circle bg-[#B68C5A] text-white">❯</a>
                     </div>
                 </div>
+            </div>
+        </section>
+
+
+        <!-- faq section  -->
+        <section class="my-20 flex flex-col lg:flex-row items-center">
+            <div class="flex-1">
+                <div class="collapse collapse-plus bg-base-200 mb-5">
+                    <input type="radio" name="my-accordion-3" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">
+                        1. Are application fee waivers available?
+                    </div>
+                    <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, . </p>
+                    </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200 mb-5">
+                    <input type="radio" name="my-accordion-3" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">
+                        2. Are application fee waivers available?
+                    </div>
+                    <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, . </p>
+                    </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200 mb-5">
+                    <input type="radio" name="my-accordion-3" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">
+                        3. Are application fee waivers available?
+                    </div>
+                    <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, . </p>
+                    </div>
+                </div>
+                <div class="collapse collapse-plus bg-base-200 mb-5">
+                    <input type="radio" name="my-accordion-3" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">
+                        4. Are application fee waivers available?
+                    </div>
+                    <div class="collapse-content">
+                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
+                            suffered alteration in some form, by injected humour, . </p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex-1">
+                <img src="images/faq.png" alt="">
             </div>
         </section>
     </main>
 
 
-    <footer>
-
+    <footer class="footer p-10 bg-black text-white grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <nav class="lg:mx-auto">
+            <img src="images/logo2.png" alt="">
+            <p class="">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form, by injected humour.</p>
+        </nav>
+        <nav class="lg:mx-auto">
+            <header class="footer-title">Company</header>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav class="lg:mx-auto">
+            <header class="footer-title">Legal</header>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </nav>
+        <form class="lg:mx-auto">
+            <header class="footer-title">Newsletter</header>
+            <fieldset class="form-control">
+                <label class="label">
+                    <span class="">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</span>
+                </label>
+                <div class="relative">
+                    <input type="text" placeholder="Email Address" class="input input-bordered w-full pr-16" />
+                    <button class="btn bg-[#B68C5A] text-white absolute top-0 right-0 rounded-l-none">
+                        <i class="fa-solid fa-location-arrow"></i>
+                    </button>
+                </div>
+            </fieldset>
+        </form>
     </footer>
 </body>
 
