--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </ul>
                 </div>
                 <a class="btn btn-ghost">
-                    <img class="sm:w-28" src="images/logo2.png" alt="">
+                    <img class="max-sm:w-28" src="images/logo2.png" alt="">
                 </a>
             </div>
             <div class="navbar-center hidden lg:flex">
@@ -64,7 +64,7 @@
                 </ul>
             </div>
             <div class="navbar-end">
-                <a class="btn bg-[#B68C5A] text-white">Free Consultation</a>
+                <a class="btn bg-[#B68C5A] text-white max-sm:hidden">Free Consultation</a>
             </div>
         </div>
     </header>
@@ -82,7 +82,7 @@
                         <p class="mb-5 main-text">There are many variations of passages of Lorem Ipsum available, but
                             the majority have suffered alteration in some form, by injected humour.</p>
                         <div>
-                            <input type="text" placeholder="Search your services" class="input w-full max-w-xs" />
+                            <input type="text" placeholder="Search your services" class="input w-full max-w-sm" />
                             <button class="btn bg-[#B68C5A] text-white border-none">Search</button>
                         </div>
                     </div>
@@ -286,6 +286,81 @@
             </div>
             <div class="flex-1">
                 <img src="images/faq.png" alt="">
+            </div>
+        </section>
+
+
+        <!-- contact section  -->
+        <section class="my-20 text-center">
+            <h2 class="title-text text-4xl font-bold">Contact With Us</h2>
+            <p class=" my-4">There are many variations of passages of Lorem Ipsum available, but the majority have <br>
+                suffered alteration in some form, by injected humour.</p>
+
+            <div class="flex flex-col lg:flex-row items-center gap-10">
+                <div class="grid max-sm:grid-cols-1 grid-cols-2 items-center flex-1">
+                    <div class="bg-[#F3F3F3] p-10">
+                        <img class="mx-auto" src="images/location.png" alt="">
+                        <h4 class="title-text text-xl font-bold">Address</h4>
+                        <p>A108 Adam Street, <br>
+                            New York, NY 535022</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] p-10">
+                        <img class="mx-auto" src="images/call.png" alt="">
+                        <h4 class="title-text text-xl font-bold">Call Us</h4>
+                        <p>+88 01750 00 00 00 <br>
+                            +88 01750 00 00 00</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] p-10">
+                        <img class="mx-auto" src="images/email.png" alt="">
+                        <h4 class="title-text text-xl font-bold">Email Us</h4>
+                        <p>info@gmail.com <br>
+                            info@gmail.com</p>
+                    </div>
+                    <div class="bg-[#F3F3F3] p-10">
+                        <img class="mx-auto" src="images/time.png" alt="">
+                        <h4 class="title-text text-xl font-bold">Working Hours</h4>
+                        <p>Mon-Fri: 9AM to 5PM <br>
+                            Sunday: 9AM to 1 PM</p>
+                    </div>
+                </div>
+
+                <div class="flex-1">
+                    <form class="w-full mx-auto text-start">
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+                                Name
+                            </label>
+                            <input class="input input-bordered w-full max-w-sm bg-[#F3F3F3]" id="username" type="text"
+                                placeholder="Your Name">
+                        </div>
+                        <div class="mb-6">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="email">
+                                Email
+                            </label>
+                            <input class="input input-bordered w-full max-w-sm bg-[#F3F3F3]" id="email" type="email"
+                                placeholder="Your Email">
+                        </div>
+                        <div class="mb-4">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="subject">
+                                Subject
+                            </label>
+                            <input class="input input-bordered w-full max-w-sm bg-[#F3F3F3]" id="subject" type="text"
+                                placeholder="Subject">
+                        </div>
+                        <div class="mb-6">
+                            <label class="block text-gray-700 text-sm font-bold mb-2" for="massage">
+                                Massage
+                            </label>
+                            <textarea class="input input-bordered w-full max-w-sm h-24 bg-[#F3F3F3]" id="" type="text"
+                                placeholder="Your Massage"></textarea>
+                        </div>
+                        <div class="">
+                            <button class="btn bg-[#B68C5A] text-white w-full max-w-sm" type="submit">
+                                Send Massage
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
     </main>
